argocd/apps/nextcloud/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    istio-injection: enable
