argocd/apps/nextcloud/manifests/host-network-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  template:
    spec:
      hostNetwork: true
