argocd/apps/nextcloud/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: nextcloud-app
  name: nextcloud-httproute
  namespace: nextcloud
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - nextcloudk8s.yanello.net
  rules:
    - backendRefs:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: max-age=15552000; includeSubDomains;
