argocd/apps/nextcloud/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frigate-vs
spec:
  hosts:
  - nextcloud.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: nextcloud
        port:
          number: 8080
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=15552000; includeSubDomains
